@@ -285,7 +285,7 @@ public class AbstractAreaEffect implements AreaEffect {
     public void setBrushSteps(int brushSteps) {
         int oldBrushSteps = this.brushSteps;
         this.brushSteps = brushSteps;
-        propertyChangeSupport.firePropertyChange("brushSteps", new Integer(oldBrushSteps), new Integer(brushSteps));
+        propertyChangeSupport.firePropertyChange("brushSteps", Integer.valueOf(oldBrushSteps), Integer.valueOf(brushSteps));
     }
     
     /**
@@ -308,7 +308,7 @@ public class AbstractAreaEffect implements AreaEffect {
     public void setEffectWidth(int effectWidth) {
         int oldEffectWidth = this.effectWidth;
         this.effectWidth = effectWidth;
-        propertyChangeSupport.firePropertyChange("effectWidth", new Integer(oldEffectWidth), new Integer(effectWidth));
+        propertyChangeSupport.firePropertyChange("effectWidth", Integer.valueOf(oldEffectWidth), Integer.valueOf(effectWidth));
     }
     
     /**
@@ -331,7 +331,7 @@ public class AbstractAreaEffect implements AreaEffect {
     public void setRenderInsideShape(boolean renderInsideShape) {
         boolean oldRenderInsideShape = this.renderInsideShape;
         this.renderInsideShape = renderInsideShape;
-        propertyChangeSupport.firePropertyChange("renderInsideShape", new Boolean(oldRenderInsideShape), new Boolean(renderInsideShape));
+        propertyChangeSupport.firePropertyChange("renderInsideShape", Boolean.valueOf(oldRenderInsideShape), Boolean.valueOf(renderInsideShape));
     }
     
     /**
@@ -377,7 +377,7 @@ public class AbstractAreaEffect implements AreaEffect {
     public void setShouldFillShape(boolean shouldFillShape) {
         boolean oldShouldFillShape = this.shouldFillShape;
         this.shouldFillShape = shouldFillShape;
-        propertyChangeSupport.firePropertyChange("shouldFillShape", new Boolean(oldShouldFillShape), new Boolean(shouldFillShape));
+        propertyChangeSupport.firePropertyChange("shouldFillShape", Boolean.valueOf(oldShouldFillShape), Boolean.valueOf(shouldFillShape));
     }
     
     /**
@@ -400,7 +400,7 @@ public class AbstractAreaEffect implements AreaEffect {
     public void setShapeMasked(boolean shapeMasked) {
         boolean oldShapeMasked = this.shapeMasked;
         this.shapeMasked = shapeMasked;
-        propertyChangeSupport.firePropertyChange("shapeMasked", new Boolean(oldShapeMasked), new Boolean(shapeMasked));
+        propertyChangeSupport.firePropertyChange("shapeMasked", Boolean.valueOf(oldShapeMasked), Boolean.valueOf(shapeMasked));
     }
     
 }
